[tool.poetry]
name = "tiktok-rss"
version = "0.2.0"
description = "A simple TikTok RSS feed generator."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
rfeed = "^1.1.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
